# poetry-redshift-notebook

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
notebooks/: pandas_template.ipynb
